--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -1424,4 +1424,101 @@ a {
 .single_pagination_link a {
   color: #fff;
   font-size: 1.6rem;
+}
+
+/*---------- contact page ----------*/
+.careful {
+  width: 100vw;
+  padding: 50px 0;
+  background: #fffeed;
+  border-bottom: 5px solid #fca500;
+  border-top: 5px solid #fca500;
+  margin: 85px 0;
+}
+.careful_content h1 {
+  font-size: 4rem;
+  text-align: center;
+}
+.careful_content h1 img {
+  vertical-align: middle;
+  margin-bottom: 10px;
+}
+.careful_content_txt {
+  margin-top: 45px;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: bold;
+}
+.careful_content_txt_tel {
+  margin: 30px 0;
+  font-size: 4rem;
+  color: #fca500;
+  letter-spacing: 0.1em;
+}
+
+.contactform {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.contactform h3 {
+  font-size: 2rem;
+  color: #4f6a20;
+}
+.contactform_one:not(:first-child) {
+  margin-top: 15px;
+}
+.contactform_one_name {
+  height: 30px;
+  width: 20%;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+.contactform_one_tel {
+  height: 30px;
+  width: 20%;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+.contactform_one_mail {
+  height: 30px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  width: 40%;
+  min-width: 250px;
+}
+.contactform_one_kind {
+  font-size: 1.7rem;
+}
+.contactform_one_text {
+  width: 100%;
+  height: 300px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+.contactform_submit {
+  width: 200px;
+  padding: 10px 0;
+  font-size: 2rem;
+  border-radius: 5px;
+  background: #1b5d00;
+  margin: 25px auto 0 auto;
+}
+.contactform_submit p {
+  display: flex;
+  justify-content: center;
+}
+.contactform_submit input {
+  color: #fff;
+}
+.contactform_submit .wpcf7-spinner {
+  display: none;
+}
+
+.wpcf7-response-output {
+  font-size: 1.7rem;
+  text-align: center;
+  background: #eafced;
+  border: 2px solid #268e00 !important;
+  border-radius: 5px;
 }/*# sourceMappingURL=style.css.map */
