--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -899,12 +899,14 @@
       width: 20%;
       border: 1px solid #000;
       border-radius: 5px;
+      min-width: 200px;
     }
     &_tel {
       height: 30px;
       width: 20%;
       border: 1px solid #000;
       border-radius: 5px;
+      min-width: 200px;
     }
     &_mail {
       height: 30px;
