--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -1439,9 +1439,20 @@ a {
   font-size: 4rem;
   text-align: center;
 }
+@media screen and (max-width: 768px) {
+  .careful_content h1 {
+    font-size: 3.5rem;
+  }
+}
 .careful_content h1 img {
   vertical-align: middle;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 768px) {
+  .careful_content h1 img {
+    width: 40px;
+    height: 40px;
+  }
 }
 .careful_content_txt {
   margin-top: 45px;
@@ -1449,11 +1460,21 @@ a {
   text-align: center;
   font-weight: bold;
 }
+@media screen and (max-width: 768px) {
+  .careful_content_txt {
+    font-size: 1.7rem;
+  }
+}
 .careful_content_txt_tel {
   margin: 30px 0;
   font-size: 4rem;
   color: #fca500;
   letter-spacing: 0.1em;
+}
+@media screen and (max-width: 768px) {
+  .careful_content_txt_tel {
+    font-size: 3.5rem;
+  }
 }
 
 .contactform {
