--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -862,9 +862,16 @@
     h1 {
       font-size: 4rem;
       text-align: center;
+      @include m.mq(sp) {
+        font-size: 3.5rem;
+      }
       img {
         vertical-align: middle;
         margin-bottom: 10px;
+        @include m.mq(sp) {
+          width: 40px;
+          height: 40px;
+        }
       }
     }
     &_txt {
@@ -872,11 +879,17 @@
       font-size: 2rem;
       text-align: center;
       font-weight: bold;
+      @include m.mq(sp) {
+        font-size: 1.7rem;
+      }
       &_tel {
         margin: 30px 0;
         font-size: 4rem;
         color: #fca500;
         letter-spacing: 0.1em;
+        @include m.mq(sp) {
+          font-size: 3.5rem;
+        }
       }
     }
   }
