--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -957,6 +957,9 @@ a {
 .hospital_info_content_arrow {
   padding-top: 25px;
 }
+.hospital_info_content_arrow div {
+  opacity: 0;
+}
 .hospital_info_content_arrow div:not(:first-child) {
   padding-top: 10px;
 }
@@ -1038,6 +1041,7 @@ a {
   }
 }
 .hospital_info_content .circle_wrapper {
+  opacity: 0;
   position: absolute;
   bottom: 10%;
   left: 5%;
@@ -1103,6 +1107,7 @@ a {
   justify-content: space-around;
 }
 .doctor_content {
+  opacity: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -1190,6 +1195,7 @@ a {
   width: 100vw;
 }
 .department_content_one {
+  opacity: 0;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -1302,6 +1308,9 @@ a {
   font-size: 2.5rem;
   font-weight: bold;
   margin-left: 20px;
+  display: flex;
+  align-items: flex-end;
+  height: 72px;
 }
 @media screen and (max-width: 768px) {
   .newspage_content_menu {
@@ -1313,27 +1322,32 @@ a {
     height: 46px;
   }
 }
+.newspage_content_menu_important {
+  margin-left: 3px;
+}
 .newspage_content_menu a {
   border-radius: 10px 10px 0 0;
   padding: 17px 0;
   background: #1b5d00;
   display: inline-block;
-  width: 300px;
+  width: 250px;
   text-align: center;
   color: #fff;
 }
 @media screen and (max-width: 768px) {
   .newspage_content_menu a {
     padding: 10px 0;
-    width: 135px;
+    width: 125px;
   }
 }
 .newspage_content_menu .none {
   opacity: 0.7;
   transition: all 0.2s;
+  height: 90%;
 }
 .newspage_content_menu .none:hover {
   opacity: 1;
+  height: 100%;
 }
 .newspage_content_main {
   padding: 100px;
@@ -1380,6 +1394,8 @@ a {
   left: 0;
 }
 .newspage_content_main_list .news_list_tag {
+  text-align: center;
+  min-width: 70px;
   font-size: 1.4rem;
   padding: 4px 6px;
   color: #fff;
@@ -1389,6 +1405,7 @@ a {
 }
 @media screen and (max-width: 768px) {
   .newspage_content_main_list .news_list_tag {
+    min-width: 60px;
     font-size: 1.2rem;
     margin: 5px 10px;
   }
