--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -371,6 +371,7 @@
     &_arrow {
       padding-top: 25px;
       div {
+        opacity: 0;
         &:not(:first-child) {
           padding-top: 10px;
         }
@@ -444,6 +445,7 @@
       }
     }
     .circle_wrapper {
+      opacity: 0;
       position: absolute;
       bottom: 10%;
       left: 5%;
@@ -505,6 +507,7 @@
     justify-content: space-around;
   }
   &_content {
+    opacity: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -584,6 +587,7 @@
   width: 100vw;
   &_content {
     &_one {
+      opacity: 0;
       display: flex;
       justify-content: space-between;
       width: 100%;
@@ -693,6 +697,9 @@
       font-size: 2.5rem;
       font-weight: bold;
       margin-left: 20px;
+      display: flex;
+      align-items: flex-end;
+      height: 72px;
       @include m.mq(sp) {
         font-size: 1.7rem;
         height: 46px;
@@ -701,24 +708,29 @@
           height: 46px;
         }
       }
+      &_important {
+        margin-left: 3px;
+      }
       a {
         border-radius: 10px 10px 0 0;
         padding: 17px 0;
         background: $color-deep-green;
         display: inline-block;
-        width: 300px;
+        width: 250px;
         text-align: center;
         color: #fff;
         @include m.mq(sp) {
           padding: 10px 0;
-          width: 135px;
+          width: 125px;
         }
       }
       .none {
         opacity: 0.7;
         transition: all 0.2s;
+        height: 90%;
         &:hover {
           opacity: 1;
+          height: 100%;
         }
       }
     }
@@ -761,6 +773,8 @@
           }
         }
         .news_list_tag {
+          text-align: center;
+          min-width: 70px;
           font-size: 1.4rem;
           padding: 4px 6px;
           color: #fff;
@@ -768,6 +782,7 @@
           background: $color-green;
           margin: 0 20px;
           @include m.mq(sp) {
+            min-width: 60px;
             font-size: 1.2rem;
             margin: 5px 10px;
           }
