--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -87,11 +87,10 @@ a {
 /*---------- header ----------*/
 .header {
   z-index: 999999;
-  background: rgba(255, 255, 255, 0.75);
+  background: rgba(255, 255, 255, 0);
   padding: 0 30px;
   width: 100vw;
   height: 70px;
-  box-shadow: rgba(0, 0, 0, 0.2549019608) 0 3px 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -120,10 +119,16 @@ a {
   top: 0;
   left: 0;
 }
-.header_img img {
+.header_img svg {
   width: auto;
   height: 100%;
   object-fit: contain;
+}
+.header_img svg g ellipse {
+  fill: #fff;
+}
+.header_img svg g text {
+  fill: #fff;
 }
 .header_nav {
   /*---------- ハンバーガー ----------*/
@@ -132,7 +137,7 @@ a {
   display: flex;
   font-size: 1.5rem;
   font-weight: bold;
-  color: #4f6a20;
+  color: #fff;
 }
 @media screen and (max-width: 768px) {
   .header_nav_list {
@@ -151,6 +156,9 @@ a {
   .header_nav_list li:not(:last-child) {
     margin-right: 30px;
   }
+}
+.header_nav_list li a {
+  color: #fff;
 }
 .header_nav_list li::before {
   position: absolute;
