--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -442,7 +442,7 @@ a {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: $color-sub-green;
+    background: #fff;
     left: 50%;
     top: -20px;
     z-index: -1;
@@ -562,18 +562,22 @@ a {
     }
   }
 }
+@keyframes left_to_right {
+  from {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .left_to_right {
   animation: left_to_right 1s forwards;
-  @keyframes left_to_right {
-    from {
-      opacity: 0;
-      transform: translateX(-50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
+}
+.left_to_right_delay {
+  animation: left_to_right 1s 1.2s forwards;
 }
 .opacity_blur {
   animation: opacity_blur 1s forwards;
